--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.4",
+    "gh-pages": "^3.2.3",
+    "npm": "^7.24.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -17,7 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy" : "npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
@@ -38,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage" : "https://KoGaYoung.github.io/movie_review_gy"
+  "homepage": "https://KoGaYoung.github.io/movie_review_gy"
 }
